k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pasakay-ui-service
spec:
  selector:
    app: pasakay-ui
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
