k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pasakay-app-ui-ingress
  namespace: pasakay-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/app-root: /
    # nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/apps/carpool)$ $1/ redirect;
spec:
  tls:
    - hosts:
        - seanyoro.com
      secretName: pasakay-app-tls-secret
  ingressClassName: nginx
  rules:
    - host: "seanyoro.com"
    - http:
        paths:
          - pathType: Prefix
            path: /apps/carpool(/|$)(.*)
            backend:
              service:
                name: pasakay-ui-service
                port:
                  number: 80
